Fix USTM to have weekday adjustment done

--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -92,9 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_27136\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path)\n",
-      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_27136\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_5376\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file_path)\n"
      ]
     },
@@ -102,7 +100,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/OY2023_Summary_SEGID.csv\n",
+      "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/OY2023_Summary_SEGID.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_5376\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/STIP2028_Summary_SEGID.csv\n"
      ]
     },
@@ -110,9 +122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_27136\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file_path)\n",
-      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_27136\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_5376\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file_path)\n"
      ]
     },
@@ -120,7 +130,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/FY2032_Summary_SEGID.csv\n",
+      "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/FY2032_Summary_SEGID.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bhereth\\AppData\\Local\\Temp\\ipykernel_5376\\1412907378.py:20: DtypeWarning: Columns (153) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/FY2042_Summary_SEGID.csv\n",
       "data/model-output/0_USTM_v3.0 - 2023-08-17_DRAFT/FY2050_Summary_SEGID.csv\n",
       "data/model-output/1_WF/v9_SE19_Net19_Summary_SEGID.csv\n",
@@ -705,7 +729,7 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>126</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -719,7 +743,7 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2023</td>\n",
-       "      <td>99</td>\n",
+       "      <td>101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -733,7 +757,7 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2028</td>\n",
-       "      <td>101</td>\n",
+       "      <td>103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -747,7 +771,7 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2032</td>\n",
-       "      <td>103</td>\n",
+       "      <td>105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -761,7 +785,7 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2042</td>\n",
-       "      <td>107</td>\n",
+       "      <td>109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -867,11 +891,11 @@
        "45256   WFRC_8266          1       35     1.0946        0.0  8334.6  4.0   \n",
        "\n",
        "        ATYPENAME  LANES  YEAR  modAadt  \n",
-       "0      Rural         1.0  2019      126  \n",
-       "1      Rural         1.0  2023       99  \n",
-       "2      Rural         1.0  2028      101  \n",
-       "3      Rural         1.0  2032      103  \n",
-       "4      Rural         1.0  2042      107  \n",
+       "0      Rural         1.0  2019      128  \n",
+       "1      Rural         1.0  2023      101  \n",
+       "2      Rural         1.0  2028      103  \n",
+       "3      Rural         1.0  2032      105  \n",
+       "4      Rural         1.0  2042      109  \n",
        "...           ...    ...   ...      ...  \n",
        "45252       Urban    2.0  2023     3909  \n",
        "45253       Urban    2.0  2028     5044  \n",
@@ -895,11 +919,9 @@
     "display()\n",
     "\n",
     "# calculate AADT by subareaid\n",
-    "# 0-USTM: AADT already\n",
-    "# 1-5: divide by colWeekdayFactor\n",
-    "_df.loc[((_df['SUBAREAID']==0)                                       ), 'modAadt'] =  _df['DY_VOL']\n",
-    "_df.loc[((_df['SUBAREAID'].isin([1,2,3,4,5])) & (_df[colFacWdAvg]> 0)), 'modAadt'] = (_df['DY_VOL'] / _df[colFacWdAvg])\n",
-    "_df.loc[((_df['SUBAREAID'].isin([1,2,3,4,5])) & (_df[colFacWdAvg]==0)), 'modAadt'] = 0\n",
+    "# divide by colWeekdayFactor\n",
+    "_df.loc[(_df[colFacWdAvg]> 0), 'modAadt'] = (_df['DY_VOL'] / _df[colFacWdAvg])\n",
+    "_df.loc[(_df[colFacWdAvg]==0), 'modAadt'] = 0\n",
     "\n",
     "# Convert to integer as you had before\n",
     "_df['modAadt'] = _df['modAadt'].astype(int)\n",
@@ -1413,27 +1435,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0006_000.0</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>287.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0006_000.7</td>\n",
-       "      <td>202.0</td>\n",
+       "      <td>199.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0006_016.0</td>\n",
-       "      <td>339.0</td>\n",
+       "      <td>338.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0006_046.0</td>\n",
-       "      <td>296.0</td>\n",
+       "      <td>295.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0006_060.2</td>\n",
-       "      <td>292.0</td>\n",
+       "      <td>291.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1472,11 +1494,11 @@
       ],
       "text/plain": [
        "           SEGID  aadtAdjFactor\n",
-       "0     0006_000.0          289.0\n",
-       "1     0006_000.7          202.0\n",
-       "2     0006_016.0          339.0\n",
-       "3     0006_046.0          296.0\n",
-       "4     0006_060.2          292.0\n",
+       "0     0006_000.0          287.0\n",
+       "1     0006_000.7          199.0\n",
+       "2     0006_016.0          338.0\n",
+       "3     0006_046.0          295.0\n",
+       "4     0006_060.2          291.0\n",
        "...          ...            ...\n",
        "7366   WFRC_8259            0.0\n",
        "7367   WFRC_8260            0.0\n",
@@ -1585,8 +1607,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>126</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1601,8 +1623,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2023</td>\n",
-       "      <td>99</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>101</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1617,8 +1639,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2028</td>\n",
-       "      <td>101</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>103</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1633,8 +1655,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2032</td>\n",
-       "      <td>103</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1649,8 +1671,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2042</td>\n",
-       "      <td>107</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>109</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1769,11 +1791,11 @@
        "45256   WFRC_8266          1       35     1.0946        0.0  8334.6  4.0   \n",
        "\n",
        "        ATYPENAME  LANES  YEAR  modAadt  aadtAdjFactor  modForecast  \n",
-       "0      Rural         1.0  2019      126          289.0        400.0  \n",
-       "1      Rural         1.0  2023       99          289.0        400.0  \n",
-       "2      Rural         1.0  2028      101          289.0        400.0  \n",
-       "3      Rural         1.0  2032      103          289.0        400.0  \n",
-       "4      Rural         1.0  2042      107          289.0        400.0  \n",
+       "0      Rural         1.0  2019      128          287.0        400.0  \n",
+       "1      Rural         1.0  2023      101          287.0        400.0  \n",
+       "2      Rural         1.0  2028      103          287.0        400.0  \n",
+       "3      Rural         1.0  2032      105          287.0        400.0  \n",
+       "4      Rural         1.0  2042      109          287.0        400.0  \n",
        "...           ...    ...   ...      ...            ...          ...  \n",
        "45252       Urban    2.0  2023     3909            0.0       3900.0  \n",
        "45253       Urban    2.0  2028     5044            0.0       5000.0  \n",
@@ -1862,8 +1884,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>126</td>\n",
-       "      <td>289.0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>287.0</td>\n",
        "      <td>400.0</td>\n",
        "      <td>415</td>\n",
        "      <td>-15.0</td>\n",
@@ -1880,8 +1902,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>213</td>\n",
-       "      <td>202.0</td>\n",
+       "      <td>216</td>\n",
+       "      <td>199.0</td>\n",
        "      <td>400.0</td>\n",
        "      <td>415</td>\n",
        "      <td>-15.0</td>\n",
@@ -1898,8 +1920,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>76</td>\n",
-       "      <td>339.0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>338.0</td>\n",
        "      <td>400.0</td>\n",
        "      <td>415</td>\n",
        "      <td>-15.0</td>\n",
@@ -1916,8 +1938,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>76</td>\n",
-       "      <td>296.0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>295.0</td>\n",
        "      <td>350.0</td>\n",
        "      <td>372</td>\n",
        "      <td>-22.0</td>\n",
@@ -1934,8 +1956,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>80</td>\n",
-       "      <td>292.0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>291.0</td>\n",
        "      <td>350.0</td>\n",
        "      <td>372</td>\n",
        "      <td>-22.0</td>\n",
@@ -1988,8 +2010,8 @@
        "      <td>Rural</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>901</td>\n",
-       "      <td>1680.0</td>\n",
+       "      <td>940</td>\n",
+       "      <td>1641.0</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>2581</td>\n",
        "      <td>19.0</td>\n",
@@ -2024,8 +2046,8 @@
        "      <td>Transition</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>469</td>\n",
-       "      <td>442.0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>420.0</td>\n",
        "      <td>900.0</td>\n",
        "      <td>911</td>\n",
        "      <td>-11.0</td>\n",
@@ -2042,8 +2064,8 @@
        "      <td>Transition</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>327</td>\n",
-       "      <td>715.0</td>\n",
+       "      <td>332</td>\n",
+       "      <td>710.0</td>\n",
        "      <td>1000.0</td>\n",
        "      <td>1042</td>\n",
        "      <td>-42.0</td>\n",
@@ -2068,17 +2090,17 @@
        "6623  3483_000.0          0       57     0.9840        0.0   327.4  4.0   \n",
        "\n",
        "       ATYPENAME  LANES  YEAR  modAadt  aadtAdjFactor  modForecast  obsAadt  \\\n",
-       "0     Rural         1.0  2019      126          289.0        400.0      415   \n",
-       "1     Rural         1.0  2019      213          202.0        400.0      415   \n",
-       "2     Rural         1.0  2019       76          339.0        400.0      415   \n",
-       "3     Rural         1.0  2019       76          296.0        350.0      372   \n",
-       "4     Rural         1.0  2019       80          292.0        350.0      372   \n",
+       "0     Rural         1.0  2019      128          287.0        400.0      415   \n",
+       "1     Rural         1.0  2019      216          199.0        400.0      415   \n",
+       "2     Rural         1.0  2019       77          338.0        400.0      415   \n",
+       "3     Rural         1.0  2019       77          295.0        350.0      372   \n",
+       "4     Rural         1.0  2019       81          291.0        350.0      372   \n",
        "...          ...    ...   ...      ...            ...          ...      ...   \n",
        "6618    Suburban    2.0  2019     1991         5489.0       7500.0     7480   \n",
-       "6619  Rural         1.0  2019      901         1680.0       2600.0     2581   \n",
+       "6619  Rural         1.0  2019      940         1641.0       2600.0     2581   \n",
        "6621    Suburban    2.0  2019     5574        -3850.0       1700.0     1724   \n",
-       "6622  Transition    1.0  2019      469          442.0        900.0      911   \n",
-       "6623  Transition    1.0  2019      327          715.0       1000.0     1042   \n",
+       "6622  Transition    1.0  2019      491          420.0        900.0      911   \n",
+       "6623  Transition    1.0  2019      332          710.0       1000.0     1042   \n",
        "\n",
        "      ModVsObs  \n",
        "0        -15.0  \n",
