Finalize IMTC comments

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,13 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "fnSegments = 'data/segments/Segments_State_20231101_Draft'\n",
     "\n",
-    "seg_cols = ['SEGID','CO_FIPS','PLANAREA','SUBAREAID','F_AREA','SHAPE'] ############## ADD SUBAREA ID WHEN FILE HAS IT #####################\n",
+    "seg_cols = ['SEGID','CO_FIPS','PLANAREA','SUBAREAID','F_AREA','SHAPE']\n",
     "\n",
     "# USE ALL PLANAREAS since this app will be for entire state\n",
     "# filter by PLANAREA in segments shapefile\n",
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\forecastsegments_backup_20231116_150810.csv\n"
+      "Data saved to backup\\forecastsegments_backup_20231117_133012.csv\n"
      ]
     }
    ],
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to backup\\logfile_backup_20231116_150813.csv\n"
+      "Data saved to backup\\logfile_backup_20231117_133027.csv\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded backup\\forecastsegments_backup_20231116_150810.csv into a DataFrame\n",
+      "Loaded backup\\forecastsegments_backup_20231117_133012.csv into a DataFrame\n",
       "Dropped FL_ columns\n"
      ]
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "[8716 rows x 45 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,16 +956,22 @@
     "_sdf = pd.DataFrame.merge(dfModVolAdj, sdfSegments, on=('SEGID','SUBAREAID'), how='right')\n",
     "\n",
     "# add columns for Adjustments\n",
-    "_sdf['ADJ2019'] = 0\n",
-    "_sdf['ADJ2023'] = 0\n",
-    "_sdf['ADJ2028'] = 0\n",
-    "_sdf['ADJ2032'] = 0\n",
-    "_sdf['ADJ2042'] = 0\n",
-    "_sdf['ADJ2050'] = 0\n",
-    "_sdf['ADJHIST'] = 0\n",
-    "_sdf['NOTES'] = \"\"\n",
+    "_sdf['MF2019'].fillna(0,inplace=True)\n",
+    "_sdf['MF2023'].fillna(0,inplace=True)\n",
+    "_sdf['MF2028'].fillna(0,inplace=True)\n",
+    "_sdf['MF2032'].fillna(0,inplace=True)\n",
+    "_sdf['MF2042'].fillna(0,inplace=True)\n",
+    "_sdf['MF2050'].fillna(0,inplace=True)\n",
+    "_sdf['ADJ2019'     ] = 0\n",
+    "_sdf['ADJ2023'     ] = 0\n",
+    "_sdf['ADJ2028'     ] = 0\n",
+    "_sdf['ADJ2032'     ] = 0\n",
+    "_sdf['ADJ2042'     ] = 0\n",
+    "_sdf['ADJ2050'     ] = 0\n",
+    "_sdf['ADJHIST'     ] = 0\n",
+    "_sdf['NOTES'       ] = \"\"\n",
     "_sdf['NOTES_FURREV'] = \"\"\n",
-    "_sdf['NOTES_SEG'] = \"\"\n",
+    "_sdf['NOTES_SEG'   ] = \"\"\n",
     "\n",
     "\n",
     "# replace with latest file\n",
@@ -998,6 +1004,11 @@
     "    _sdfWithLatest.loc[(_sdfWithLatest['NOTES_FURREV']=='0'), 'NOTES_FURREV'] = ''\n",
     "    _sdfWithLatest['NOTES_FURREV'] = _sdfWithLatest['NOTES_FURREV'].str.strip()\n",
     "\n",
+    "    _sdfWithLatest['NOTES_SEG'].fillna('0', inplace=True)\n",
+    "    _sdfWithLatest['NOTES_SEG'] = _sdfWithLatest['NOTES_SEG'].astype(str)\n",
+    "    _sdfWithLatest.loc[(_sdfWithLatest['NOTES_SEG']=='0'), 'NOTES_SEG'] = ''\n",
+    "    _sdfWithLatest['NOTES_SEG'] = _sdfWithLatest['NOTES_SEG'].str.strip()\n",
+    "\n",
     "# add flag columns\n",
     "# Loop through the rows of 'dfFlags'\n",
     "for index, row in dfFlags.iterrows():\n",
@@ -1028,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1169,7 @@
        "[8716 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1540,7 @@
        "[8716 rows x 46 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,6 +1550,112 @@
     "sdfSegmentsWData['CO_NAME'] = sdfSegmentsWData.apply(lambda row: county_mapping.get(row['CO_FIPS'], {}).get('CO_NAME'), axis=1)\n",
     "sdfSegmentsWData"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGID</th>\n",
+       "      <th>SUBAREAID</th>\n",
+       "      <th>FAC_WDAVG</th>\n",
+       "      <th>aadtAdjFactor</th>\n",
+       "      <th>M2019</th>\n",
+       "      <th>M2023</th>\n",
+       "      <th>M2028</th>\n",
+       "      <th>M2032</th>\n",
+       "      <th>M2042</th>\n",
+       "      <th>M2050</th>\n",
+       "      <th>...</th>\n",
+       "      <th>NOTES_FURREV</th>\n",
+       "      <th>FL_REV</th>\n",
+       "      <th>FL_LTPRV</th>\n",
+       "      <th>FL_ZERO</th>\n",
+       "      <th>FL_HIADJ</th>\n",
+       "      <th>FL_50LT19</th>\n",
+       "      <th>FL_503X19</th>\n",
+       "      <th>FL_FURREV</th>\n",
+       "      <th>FL_SEG</th>\n",
+       "      <th>CO_NAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>0056_060.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Iron</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          SEGID  SUBAREAID  FAC_WDAVG  aadtAdjFactor  M2019  M2023  M2028  \\\n",
+       "947  0056_060.6          5        0.0            0.0    0.0    0.0    0.0   \n",
+       "\n",
+       "     M2032  M2042  M2050  ...  NOTES_FURREV  FL_REV  FL_LTPRV  FL_ZERO  \\\n",
+       "947    0.0    0.0    0.0  ...                  True     False    False   \n",
+       "\n",
+       "     FL_HIADJ  FL_50LT19  FL_503X19 FL_FURREV FL_SEG CO_NAME  \n",
+       "947     False      False      False     False  False    Iron  \n",
+       "\n",
+       "[1 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdfSegmentsWData[sdfSegmentsWData['SEGID']=='0056_060.6']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
