Add export to shapefile

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -3251,6 +3251,23 @@
    "source": [
     "jsonSegment.groupby(['F_AREA','CO_NAME','SUBAREAID'],as_index=False).agg(numSegs=('SEGID','count'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export shapefile as well to share with UDOT\n",
+    "\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Generate a filename with the current timestamp in the specified folder\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "filename = f\"results/ForecastSegments_{timestamp}.shp\"\n",
+    "\n",
+    "sdfSegmentsWData.spatial.to_featureclass(location=filename, sanitize_columns=False)\n"
+   ]
   }
  ],
  "metadata": {
