Fix for Futher Review field name truncation

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -28,13 +28,13 @@
     "\n",
     "# flag name must be short enough to be in dbf column name\n",
     "dfFlags = pd.DataFrame([\n",
-    "    ['FL_REV'   , 'Not reviewed'                    , \"([NOTES]=='') & ([NOTES_FURREV]=='')\"],\n",
+    "    ['FL_REV'   , 'Not reviewed'                    , \"([NOTES]=='') & ([NOTES_FURR]=='')\"],\n",
     "    ['FL_LTPRV' , 'Less than previous forecast year', \"(([MF2023]+[ADJ2023])<([M2019]+[aadtAdjFactor])) | (([MF2028]+[ADJ2028])<([MF2023]+[ADJ2023])) | (([MF2032]+[ADJ2032])<([MF2028]+[ADJ2028])) | (([MF2042]+[ADJ2042])<([MF2032]+[ADJ2032])) | (([MF2050]+[ADJ2050])<([MF2042]+[ADJ2042]))\"],\n",
     "    ['FL_ZERO'  , 'Zero volume'                     , \"(([MF2023]+[ADJ2023])<=0) | (([MF2028]+[ADJ2028])<=0) | (([MF2032]+[ADJ2032])<=0) | (([MF2042]+[ADJ2042])<=0) | (([MF2050]+[ADJ2050])<=0)\"],\n",
     "    ['FL_HIADJ' , 'Large model adjustment factor '  , \"((([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))>0.95) | (([aadtAdjFactor]/([M2019]+[aadtAdjFactor]))<-0.95))\"],\n",
     "    ['FL_50LT19', 'HPMS: 2050 < 2019'               , \"(([MF2050]+[ADJ2050])<([M2019]+[aadtAdjFactor]))\"],\n",
     "    ['FL_503X19', 'HPMS: 2050 > 3 x 2019'           , \"(([MF2050]+[ADJ2050])>(3*([M2019]+[aadtAdjFactor])))\"],\n",
-    "    ['FL_FURREV', 'Further Review'                  , \"([NOTES_FURREV]!='')\"],\n",
+    "    ['FL_FURREV', 'Further Review'                  , \"([NOTES_FURR]!='')\"],\n",
     "    ['FL_SEG'   , 'Segment Note'                    , \"([NOTES_SEG]!='')\"]\n",
     "], columns=('flagName','flagDescription','flagCriteria'))\n",
     "\n",
@@ -1994,16 +1994,17 @@
     "_sdf['MF2032'].fillna(0,inplace=True)\n",
     "_sdf['MF2042'].fillna(0,inplace=True)\n",
     "_sdf['MF2050'].fillna(0,inplace=True)\n",
-    "_sdf['ADJ2019'     ] = 0\n",
-    "_sdf['ADJ2023'     ] = 0\n",
-    "_sdf['ADJ2028'     ] = 0\n",
-    "_sdf['ADJ2032'     ] = 0\n",
-    "_sdf['ADJ2042'     ] = 0\n",
-    "_sdf['ADJ2050'     ] = 0\n",
-    "_sdf['ADJHIST'     ] = 0\n",
-    "_sdf['NOTES'       ] = \"\"\n",
-    "_sdf['NOTES_FURREV'] = \"\"\n",
-    "_sdf['NOTES_SEG'   ] = \"\"\n",
+    "\n",
+    "_sdf['ADJ2019'   ] = 0\n",
+    "_sdf['ADJ2023'   ] = 0\n",
+    "_sdf['ADJ2028'   ] = 0\n",
+    "_sdf['ADJ2032'   ] = 0\n",
+    "_sdf['ADJ2042'   ] = 0\n",
+    "_sdf['ADJ2050'   ] = 0\n",
+    "_sdf['ADJHIST'   ] = 0\n",
+    "_sdf['NOTES'     ] = \"\"\n",
+    "_sdf['NOTES_FURR'] = \"\"\n",
+    "_sdf['NOTES_SEG' ] = \"\"\n",
     "\n",
     "\n",
     "# replace with latest file\n",
@@ -2013,7 +2014,7 @@
     "    print(\"The latest dataframe is not empty.\")\n",
     "        \n",
     "    # Specify columns to include from latest download (FLAGS WILL NOT BE INCLUDED WHEN FILTERED PRIOR TO THIS STEP)\n",
-    "    columns_to_include = [col for col in dfLatest.columns if col.startswith('ADJ') or col.startswith('FL_') or col.startswith('OV_') or col == 'SEGID' or col == 'NOTES' or col == 'NOTES_FURREV' or col == 'NOTES_SEG']\n",
+    "    columns_to_include = [col for col in dfLatest.columns if col.startswith('ADJ') or col.startswith('FL_') or col.startswith('OV_') or col == 'SEGID' or col == 'NOTES' or col == 'NOTES_FURR' or col == 'NOTES_SEG']\n",
     "\n",
     "    # Filter df_filtered to only have the specified columns\n",
     "    dfLatest_filtered = dfLatest[columns_to_include]\n",
@@ -2031,10 +2032,10 @@
     "    _sdfWithLatest.loc[(_sdfWithLatest['NOTES']=='0'), 'NOTES'] = ''\n",
     "    _sdfWithLatest['NOTES'] = _sdfWithLatest['NOTES'].str.strip()\n",
     "\n",
-    "    _sdfWithLatest['NOTES_FURREV'].fillna('0', inplace=True)\n",
-    "    _sdfWithLatest['NOTES_FURREV'] = _sdfWithLatest['NOTES_FURREV'].astype(str)\n",
-    "    _sdfWithLatest.loc[(_sdfWithLatest['NOTES_FURREV']=='0'), 'NOTES_FURREV'] = ''\n",
-    "    _sdfWithLatest['NOTES_FURREV'] = _sdfWithLatest['NOTES_FURREV'].str.strip()\n",
+    "    _sdfWithLatest['NOTES_FURR'].fillna('0', inplace=True)\n",
+    "    _sdfWithLatest['NOTES_FURR'] = _sdfWithLatest['NOTES_FURR'].astype(str)\n",
+    "    _sdfWithLatest.loc[(_sdfWithLatest['NOTES_FURR']=='0'), 'NOTES_FURR'] = ''\n",
+    "    _sdfWithLatest['NOTES_FURR'] = _sdfWithLatest['NOTES_FURR'].str.strip()\n",
     "\n",
     "    _sdfWithLatest['NOTES_SEG'].fillna('0', inplace=True)\n",
     "    _sdfWithLatest['NOTES_SEG'] = _sdfWithLatest['NOTES_SEG'].astype(str)\n",
@@ -2219,7 +2220,7 @@
     }
    ],
    "source": [
-    "sdfSegmentsWData[['SEGID','NOTES_FURREV','NOTES_SEG','FL_FURREV','OV_FURREV']]"
+    "sdfSegmentsWData[['SEGID','NOTES_FURR','NOTES_SEG','FL_FURREV','OV_FURREV']]"
    ]
   },
   {
