Adjust site folder names to match

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -38,7 +38,7 @@
     "    ['FL_SEG'   , 'Segment Note'                    , \"([NOTES_SEG]!='')\"]\n",
     "], columns=('flagName','flagDescription','flagCriteria'))\n",
     "\n",
-    "dfFlags.to_json('_site/data/flags.json', orient='records')"
+    "dfFlags.to_json('_site-art-of-forecasting/data/flags.json', orient='records')"
    ]
   },
   {
@@ -100,7 +100,7 @@
     "\n",
     "for file in lstSegidFiles + lstNonSegidFiles:\n",
     "    # Read CSV file\n",
-    "    pd.read_csv('intermediate/' + file + '.csv').to_json('_site/data/' + file + '.json', orient='records')"
+    "    pd.read_csv('intermediate/' + file + '.csv').to_json('_site-art-of-forecasting/data/' + file + '.json', orient='records')"
    ]
   },
   {
@@ -2956,7 +2956,7 @@
     "# export segment JSON\n",
     "jsonSegment = sdfSegmentsWData[['SEGID','PLANAREA','SUBAREAID','CO_NAME','F_AREA']]\n",
     "\n",
-    "jsonSegment.to_json('_site/data/segments.json', orient='records')"
+    "jsonSegment.to_json('_site-art-of-forecasting/data/segments.json', orient='records')"
    ]
   },
   {
